Add dynamic text attributes

--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -26,6 +26,8 @@
 
    <h1>Size 48px</h1>
    <div class="px48-icons">
+      <md-icon [texts]="['CocaCola']" [xViewBox]="80" [yViewBox]="48" [yTextPos]="29"></md-icon>
+      <md-icon [texts]="['EK']" [icon]="icons.person" class="person-overlay"></md-icon>
       <md-icon [icons]="[icons.industryVehicle]"></md-icon>
       <md-icon [icons]="[icons.person]"></md-icon>
       <md-icon [icons]="[icons.bear]"></md-icon>
