--- a/projects/ngx-md-icon/src/lib/components/ngx-md-icon/ngx-md-icon.component.html
+++ b/projects/ngx-md-icon/src/lib/components/ngx-md-icon/ngx-md-icon.component.html
@@ -1,3 +1,4 @@
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-  <path *ngFor="let icon of renderIcons; let i=index" [attr.d]="icon" [class]="'icon-' + i" />
+<svg xmlns="http://www.w3.org/2000/svg" [attr.viewBox]="'0 0 ' + xViewBox + ' ' + yViewBox">
+   <text *ngFor="let text of texts; let k=index" [class]="'text-' + k" [attr.x]="xTextPos" [attr.y]="yTextPos" font-size="18">{{ text }}</text>
+   <path *ngFor="let icon of renderIcons; let i=index" [attr.d]="icon" [class]="'icon-' + i"/>
 </svg>
