--- a/projects/ngx-md-icon/src/lib/components/ngx-md-icon/ngx-md-icon.component.scss
+++ b/projects/ngx-md-icon/src/lib/components/ngx-md-icon/ngx-md-icon.component.scss
@@ -1,10 +1,14 @@
 md-icon.md-icon {
-   width: 24px;
-   height: 24px;
+   min-width: 24px;
+   min-height: 24px;
    line-height: 24px;
    display: inline-block;
    user-select: none;
    overflow: hidden;
    background-repeat: no-repeat;
    fill: currentColor;
+
+   & > svg {
+      vertical-align: middle;
+   }
 }
