--- a/projects/ngx-md-icon/src/lib/components/ngx-md-icon/ngx-md-icon.component.scss
+++ b/projects/ngx-md-icon/src/lib/components/ngx-md-icon/ngx-md-icon.component.scss
@@ -1,7 +1,6 @@
 md-icon.md-icon {
-   min-width: 24px;
-   min-height: 24px;
-   line-height: 24px;
+   width: 24px;
+   height: auto;
    display: inline-block;
    user-select: none;
    overflow: hidden;
