--- a/projects/ngx-md-icon/src/lib/components/ngx-md-icon/ngx-md-icon.component.scss
+++ b/projects/ngx-md-icon/src/lib/components/ngx-md-icon/ngx-md-icon.component.scss
@@ -1,9 +1,21 @@
 md-icon.md-icon {
+   user-select: none;
+   background-repeat: no-repeat;
+   display: inline-block;
+   fill: currentColor;
    width: 24px;
    height: auto;
-   display: inline-block;
-   user-select: none;
    overflow: hidden;
-   background-repeat: no-repeat;
-   fill: currentColor;
+
+   font-weight: normal;
+   font-style: normal;
+   font-size: 24px;
+   line-height: 1;
+   letter-spacing: normal;
+   text-transform: none;
+   white-space: nowrap;
+   word-wrap: normal;
+   direction: ltr;
+   -webkit-font-feature-settings: 'liga';
+   -webkit-font-smoothing: antialiased;
 }
