--- a/projects/ngx-md-icon/src/lib/components/ngx-md-icon/ngx-md-icon.component.scss
+++ b/projects/ngx-md-icon/src/lib/components/ngx-md-icon/ngx-md-icon.component.scss
@@ -4,7 +4,7 @@ md-icon.md-icon {
    display: inline-block;
    fill: currentColor;
    width: 24px;
-   height: auto;
+   height: 24px;
    overflow: hidden;
 
    font-weight: normal;
@@ -18,4 +18,55 @@ md-icon.md-icon {
    direction: ltr;
    -webkit-font-feature-settings: 'liga';
    -webkit-font-smoothing: antialiased;
+}
+
+/**
+ * Angular Material Styles
+ */
+
+// Buttons
+.mat-mdc-button > .mdc-button__label,
+.mat-mdc-unelevated-button > .mdc-button__label,
+.mat-mdc-raised-button > .mdc-button__label,
+.mat-mdc-outlined-button > .mdc-button__label {
+   & > md-icon.md-icon {
+      display: inline-block;
+      position: relative;
+      vertical-align: text-bottom;
+      font-size: 1.125rem;
+      height: 1.125rem;
+      width: 1.125rem;
+      margin-left: -4px;
+      margin-right: 8px;
+   }
+}
+.mat-mdc-button > .mdc-button__label {
+   & > md-icon.md-icon {
+      margin-left: 0;
+   }
+}
+
+// Scaling
+.mdc-list-item__primary-text,
+.mat-mdc-icon-button {
+   & > md-icon.md-icon {
+      transform: scale(.9);
+      transform-origin: center;
+   }
+}
+
+// Form field prefix
+.mat-mdc-form-field-icon-prefix, .mat-mdc-form-field-icon-suffix {
+   &  > md-icon.md-icon {
+      padding: 12px;
+   }
+}
+
+// Menu items
+.mdc-list-item__primary-text {
+   &  > md-icon.md-icon {
+      margin-right: 16px;
+      height: auto;
+      vertical-align: middle;
+   }
 }
