--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+@import "normalize.css/normalize.css";
+@import "@angular/material/prebuilt-themes/indigo-pink.css";
+
+
 body {
-   padding: 0;
-   margin: 0;
    background-color: #eff5f8;
    font-family: sans-serif;
 
