Add mdc-select support

--- a/projects/ngx-md-icon/src/lib/components/ngx-md-icon/mat-mdc.component.scss
+++ b/projects/ngx-md-icon/src/lib/components/ngx-md-icon/mat-mdc.component.scss
@@ -80,3 +80,16 @@
       vertical-align: bottom;
    }
 }
+
+// Select
+.mat-mdc-select {
+   .mdc-list-item__primary-text, .mat-mdc-select-value-text mat-select-trigger {
+      display: flex;
+      align-items: center;
+
+      & > md-icon.md-icon {
+         margin-right: 16px;
+      }
+   }
+}
+
