--- a/projects/ngx-md-icon/src/lib/components/ngx-md-icon/mat-mdc.component.scss
+++ b/projects/ngx-md-icon/src/lib/components/ngx-md-icon/mat-mdc.component.scss
@@ -7,6 +7,10 @@
 .mat-mdc-unelevated-button > .mdc-button__label,
 .mat-mdc-raised-button > .mdc-button__label,
 .mat-mdc-outlined-button > .mdc-button__label {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+
    & > md-icon.md-icon {
       display: inline-block;
       position: relative;
@@ -15,13 +19,24 @@
       height: 1.125rem;
       width: 1.125rem !important;
       margin-left: -4px;
-      margin-right: 4px;
+      margin-right: 8px;
    }
 }
+
+// Vanilla button
 .mat-mdc-button > .mdc-button__label {
    & > md-icon.md-icon {
-      margin-left: 4px;
+      margin-left: 0;
+      margin-right: 8px;
    }
+}
+
+// Icon button
+.mdc-icon-button {
+   display: inline-flex !important;
+   align-items: center;
+   justify-content: center;
+   padding: 0 !important;
 }
 
 // Fab
@@ -58,7 +73,7 @@
    align-items: center;
 
    & > md-icon.md-icon {
-      margin-right: 16px;
+      margin-right: 8px;
    }
 }
 
