--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -226,6 +226,85 @@
       </div>
 
       <div class="row-box">
+         <mat-form-field  appearance="fill">
+            <mat-label>Test Select</mat-label>
+            <mat-select value="option1">
+               <mat-option value="option1">
+                  <md-icon [icon]="icons.person"></md-icon>
+                  Option 1
+               </mat-option>
+               <mat-option value="option2">
+                  <md-icon [icon]="icons.person"></md-icon>
+                  Option 2
+               </mat-option>
+               <mat-option value="option3">
+                  <md-icon [icon]="icons.person"></md-icon>
+                  Option 3
+               </mat-option>
+            </mat-select>
+         </mat-form-field>
+         <mat-form-field  appearance="fill">
+            <mat-label>Test Select</mat-label>
+            <mat-select value="option1">
+               <mat-select-trigger>
+                  <md-icon [icon]="icons.person"></md-icon>
+                  Option
+               </mat-select-trigger>
+               <mat-option value="option1">
+                  <md-icon [icon]="icons.person"></md-icon>
+                  Option 1
+               </mat-option>
+               <mat-option value="option2">
+                  <md-icon [icon]="icons.person"></md-icon>
+                  Option 2
+               </mat-option>
+               <mat-option value="option3">
+                  <md-icon [icon]="icons.person"></md-icon>
+                  Option 3
+               </mat-option>
+            </mat-select>
+         </mat-form-field>
+         <mat-form-field  appearance="outline">
+            <mat-label>Test Select</mat-label>
+            <mat-select value="option1">
+               <mat-option value="option1">
+                  <md-icon [icon]="icons.person"></md-icon>
+                  Option 1
+               </mat-option>
+               <mat-option value="option2">
+                  <md-icon [icon]="icons.person"></md-icon>
+                  Option 2
+               </mat-option>
+               <mat-option value="option3">
+                  <md-icon [icon]="icons.person"></md-icon>
+                  Option 3
+               </mat-option>
+            </mat-select>
+         </mat-form-field>
+         <mat-form-field  appearance="outline">
+            <mat-label>Test Select</mat-label>
+            <mat-select value="option1">
+               <mat-select-trigger>
+                  <md-icon [icon]="icons.person"></md-icon>
+                  Option
+               </mat-select-trigger>
+               <mat-option value="option1">
+                  <md-icon [icon]="icons.person"></md-icon>
+                  Option 1
+               </mat-option>
+               <mat-option value="option2">
+                  <md-icon [icon]="icons.person"></md-icon>
+                  Option 2
+               </mat-option>
+               <mat-option value="option3">
+                  <md-icon [icon]="icons.person"></md-icon>
+                  Option 3
+               </mat-option>
+            </mat-select>
+         </mat-form-field>
+      </div>
+
+      <div class="row-box">
          <mat-form-field appearance="fill">
             <mat-label>md-icon</mat-label>
             <input matInput placeholder="Placeholder">
